syntax = "proto2";

package automation;

message ProtoTable {
  optional int64 ProtoStoreID = 1;
  optional string label = 2;
  optional bytes data = 3;
}
